--- a/BD/ejer1-board/views/detalle.html
+++ b/BD/ejer1-board/views/detalle.html
@@ -11,7 +11,7 @@
             {{! --- CORREGIDO: Usando variables de la BBDD --- }}
             <li><i class="bi bi-clock"></i> <strong>Duration:</strong> {{trip.duration}} days</li>
             <li><i class="bi bi-currency-euro"></i> <strong>Price:</strong> {{trip.price}}€</li>
-            <li><i class="bi bi-people"></i> <strong>Max packages:</strong> {{trip.max_travellers}}</li>
+            <li><i class="bi bi-people"></i> <strong>People:</strong> {{trip.max_travellers}}</li>
         </ul>
 
         <div class="text-center mb-4">
