obliga que elijas guia

--- a/BD/ejer1-board/views/detalle.html
+++ b/BD/ejer1-board/views/detalle.html
@@ -93,7 +93,7 @@
             <textarea id="description_activity" name="description" rows="4" cols="40" placeholder="Insert text"></textarea>
 
             <label for="guide_travel">Guide:</label>
-            <select id="guide_travel" name="guide_travel">
+            <select id="guide_travel" name="guide_travel" required>
                 <option value="">Select the option</option>
                 <option value="YES">YES</option>
                 <option value="NO">NO</option>
