--- a/BD/ejer1-board/views/detalle.html
+++ b/BD/ejer1-board/views/detalle.html
@@ -90,7 +90,7 @@
             <input type="number" id="price" name="price" min="0" max="100000" step="1" placeholder="0€" required>
 
             <label for="description_activity">Description of the activity:</label>
-            <textarea id="description_activity" name="description" rows="4" cols="40" placeholder="Insert text"></textarea>
+            <textarea id="description_activity" name="description" rows="4" cols="40" placeholder="Insert text" required></textarea>
 
             <label for="guide_travel">Guide:</label>
             <select id="guide_travel" name="guide_travel" required>
