--- a/BD/GoTravel/views/detalle.html
+++ b/BD/GoTravel/views/detalle.html
@@ -77,7 +77,7 @@
         
         <form method="POST" action="/add-activity/{{trip._id}}">
             <label for="main_city">Name of the activity:</label>
-            <input type="text" id="main_activity" name="name" placeholder="Tee time" required>
+            <input type="text" id="main_activity" name="name" placeholder="Name of the activity:" required>
 
             <label for="duration">Time span:</label>
             <input type="number" id="duration" name="duration" min="0" max="12" step="1" placeholder="3 horas" required>
