--- a/BD/GoTravel/views/main.html
+++ b/BD/GoTravel/views/main.html
@@ -10,21 +10,27 @@
     </div>
 </section>
 
-<form action="/" method="GET" class="d-flex mb-4">
-    <input class="form-control me-2" 
-            type="search" 
-            placeholder="Busque su viaje" 
-            name="searchQuery"
-            value="{{searchTerm}}"> {{#category}}
-    <input type="hidden" name="category" value="{{category}}">
-    {{/category}}
-            
-    <button class="btn btn-outline-success" type="submit">Buscar</button>
+<div class="barra-superior">
+    
+    <form action="/" method="GET" class="search-form">
+        <input class="form-control" 
+                type="search" 
+                placeholder="Busque su viaje" 
+                name="searchQuery"
+                value="{{searchTerm}}"> 
+        
+        {{#category}}
+        <input type="hidden" name="category" value="{{category}}">
+        {{/category}}
+                
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
 
     <a href="/new" class="btn button btn-dark" id="b1">Add new trip</a>
-</form>
 
-<div class="mb-4">
+</div>
+
+<div class="categorias-container">
     <h5>Categorías:</h5>
     <a href="/?category=Adventure&searchQuery={{searchTerm}}" 
        class="btn {{#pagination.isCategoryActive.Adventure}}btn-primary{{else}}btn-outline-primary{{/pagination.isCategoryActive.Adventure}}">
@@ -39,16 +45,16 @@
        Relax
     </a>
     
-    <a href="/" class="btn btn-outline-danger">Limpiar filtros</a>
+    <a href="/" class="btn btn-outline-danger">ALL TRIPS</a>
 </div>
 
-<section class="container my-5">
+<section class="container-fluid px-4 my-5">
     <h2 class="">TRIPS</h2>
     
     <div class="row g-4" id="trip-results">
         
         {{#trips}}
-        <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="col-lg-4 col-md-6 col-sm-12"> 
             <div class="card h-100 shadow-sm">
                 <img src="/trip/{{_id}}/image" class="card-img-top" alt="{{name}}">
                 <div class="card-body d-flex flex-column">
@@ -63,7 +69,7 @@
         {{/trips}}
 
         {{^trips}}
-        <p class="text-center text-muted">No trips were found.</p>
+        <p class="text-center text-muted col-12">No trips were found.</p>
         {{/trips}}
     </div>
     
