--- a/BD/GoTravel/public/style_full.css
+++ b/BD/GoTravel/public/style_full.css
@@ -160,11 +160,17 @@ section.container-fluid {
     transform: scale(1.02);
 }
 
+
 .card-img-top {
     width: 100%;
     height: 220px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
+    transition: transform 0.3s ease;
+}
+
+.card-img-top:hover {
+    transform: scale(1.05); 
 }
 
 
@@ -261,6 +267,8 @@ footer {
     transform: none !important;
     background-color: #ffffff !important;
 }
+
+/* --- MODIFICADO: Imagen grande --- */
 #imagen {
     grid-column: 1;
     grid-row: 1 / 4; 
@@ -270,7 +278,14 @@ footer {
     border-radius: 0 !important; 
     margin: 0 !important;
     display: block;
+    transition: transform 0.3s ease; /* Suaviza la animación */
 }
+
+#imagen:hover {
+    transform: scale(1.1); /* Amplía la imagen */
+}
+/* -------------------------------- */
+
 .list-group-item.rounded.shadow > h3 {
     grid-column: 2;
     grid-row: 1;
